--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>登录</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>登录</h1>
-  </body>
-</html>
+<% include ../include/head%>
+<h1>登录</h1>
+<form method="post" action="/users/login">
+  <div class="form-group">
+    <label for="username">用户名</label>
+    <input type="text" name="username" class="form-control" id="username" placeholder="请输入用户名">
+  </div>
+  <div class="form-group">
+    <label for="password">密码</label>
+    <input type="password" name="password" class="form-control" id="password" placeholder="请输入密码">
+  </div>
+  <button type="submit" class="btn btn-default">登录</button>
+</form>
+<% include ../include/foot%>
