--- a/views/articles/add.ejs
+++ b/views/articles/add.ejs
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>添加</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-<h1>添加</h1>
-</body>
-</html>
+<% include ../include/head%>
+<form method="post" action="/articles/add" enctype="multipart/form-data">
+  <div class="form-group">
+    <label for="title">标题</label>
+    <input type="text" value="" name="title" class="form-control" id="title" placeholder="请输入标题">
+  </div>
+  <div class="form-group">
+    <label for="content">内容</label></br>
+    <textarea name="content" id="content" cols="100%" rows="10" placeholder="请输入内容"></textarea>
+  </div>
+  <div class="form-group">
+    <label for="content">图片</label>
+    <img src="" alt="">
+    <input type="file" name="poster">
+  </div>
+  <button type="submit" class="btn btn-default">提交</button>
+</form>
+<% include ../include/foot%>
