--- a/views/include/foot.ejs
+++ b/views/include/foot.ejs
@@ -1,3 +1,11 @@
+
+<%if(success){
+%><div class="alert alert-success" role="alert"><%=success%></div><%
+}%>
+<%if(error){
+%><div class="alert alert-danger" role="alert"><%=error%></div><%
+}%>
+
 </body>
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
