--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -14,11 +14,37 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
+                <%
+                if(!user){
+                %>
                 <li class="active"><a href="/users/reg">注册</a></li>
-                <li><a href="/users/login">登陆</a></li>
+                <li><a href="/users/login">登录</a></li>
+                <%
+                }else{
+                %>
                 <li><a href="/articles/add">发表文章</a></li>
-                <li><a href="/users/logout">退出</a></li>
+                <li><a href="/users/logout">登出</a></li>
+                <%
+                }
+                %>
             </ul>
+            <%if(user){%>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                       aria-haspopup="true" aria-expanded="false">
+                        <img src="<%=user.avatar%>" alt="avatar" style="width: 50%; height: 50%">
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><%=user.username%></li>
+                        <li><%=user.email%></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/users/logout">登出</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <%}%>
+
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
