--- a/views/users/reg.ejs
+++ b/views/users/reg.ejs
@@ -5,8 +5,16 @@
     <input type="text" name="username" class="form-control" id="username" placeholder="请输入用户名">
   </div>
   <div class="form-group">
+    <label for="username">邮箱</label>
+    <input type="text" name="email" class="form-control" id="email" placeholder="请输入邮箱">
+  </div>
+  <div class="form-group">
     <label for="password">密码</label>
     <input type="password" name="password" class="form-control" id="password" placeholder="请输入密码">
+  </div>
+  <div class="form-group">
+    <label for="repassword">再次输入密码</label>
+    <input type="password" name="repassword" class="form-control" id="repassword" placeholder="请再次输入密码">
   </div>
   <button type="submit" class="btn btn-default">注册</button>
 </form>
