--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -8,7 +8,7 @@
 <nav class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">珠峰博客</a>
+            <a class="navbar-brand" href="/">珠峰博客</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,7 +27,14 @@
                 <%
                 }
                 %>
+
             </ul>
+            <form class="navbar-form navbar-left" role="search" method="get" action="/articles/list/1">
+                <div class="form-group">
+                    <input type="text" name="keyword" value="<%=keyword%>" class="form-control" placeholder="请输入查询关键字">
+                </div>
+                <button type="submit" class="btn btn-default">查询</button>
+            </form>
             <%if(user){%>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -46,5 +53,6 @@
             <%}%>
 
         </div><!-- /.navbar-collapse -->
+
     </div><!-- /.container-fluid -->
 </nav>
