--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,8 @@
 <% include include/head%>
+<audio loop autoplay>
+    <source src="/music" type="audio/mpeg">
+</audio>
+
 <%
 if(articles)
 for(var i=0;i<articles.length;i++){
